test/Error/Grind/AmbiguousProjection/Main.ds

-- Check handling of ambiguous projections.

fun x	= x.wibble;
